--- a/src/Contact.css
+++ b/src/Contact.css
@@ -1,26 +1,38 @@
+.form-control.box {
+  border: none;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05), 0 6px 20px 0 rgba(0, 0, 0, 0.10);
+}
 
-.container-fluid.ficha {
-    background-color:rgb(247, 242, 226);
-    padding: 30px;
-    box-sizing: border-box;
-  }
+.container-fluid.form {
+  background-color:rgb(255, 255, 255);
+  padding: 30px;
+  box-sizing: border-box;
+  width: 80%;
+  margin-bottom: 5%;
+}
   
+.col.col-xs-12.banner {
+  height: 100px;
+  background-image: url("/assets/bkg-header.jpg");
+  background-size: cover;
+  background-position: center;
+}
   
-  .titulo-ppal-newanimal {
-    margin: 20px;
-    font-size: 25px;
-    text-align: center;
-    font-weight: 600;
-  }
+.titulo-ppal-form {
+  margin: 20px;
+  font-size: 25px;
+  text-align: center;
+  font-weight: 600;
+}
   
-  .btn.btn-primary.card.buscador {
-    color: rgb(255, 255, 255);
-    background-color: #FFA000;
-    border-color: #FF8F00;
-    margin-top: 0px;
-  }
+.btn.btn-primary.form {
+  color: rgb(255, 255, 255);
+  background-color: #FFA000;
+  border-color: #FF8F00;
+  margin-top: 0px;
+}
   
-  .btn.btn-primary.card.buscador:hover {
-    background-color: rgb(212, 135, 2);
-    border-color:  rgb(212, 135, 2);
-  }
+.btn.btn-primary.form:hover {
+  background-color: rgb(212, 135, 2);
+  border-color:  rgb(212, 135, 2);
+}
