--- a/src/Header.css
+++ b/src/Header.css
@@ -2,15 +2,17 @@
   z-index: 1;
   height: 50px;
   font: arial;
-  background-color: #f8f9fa;
+  background-color: rgb(36, 36, 36);
   padding: 5px;
   justify-content: center;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05), 0 6px 20px 0 rgba(0, 0, 0, 0.10);
 }
 
-.btn.btn-light {
+.btn.btn-dark {
   margin-left: 10px;
   margin-right: 10px;
+  background-color: rgb(36, 36, 36);
+  border: none;
 }
 
 
@@ -19,7 +21,7 @@
 }
 
 .navbar a.active {
-  background-color: #4CAF50;
+  background-color: rgb(36, 36, 36);
   color: white;
 }
 
